// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerInput should render correctly 1`] = `
.emotion-5 {
  display: inline-block;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-0:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::placeholder {
  color: #B9B9BD;
}

.emotion-0:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-0:not(:disabled):hover {
  border-color: #818489;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-0:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-63 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-62 {
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
}

.emotion-61 {
  width: 288px;
}

.emotion-8 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  display: inline-block;
}

.emotion-8:first-of-type {
  margin-left: 0;
}

.emotion-8:last-of-type {
  margin-right: 0;
}

.emotion-8:empty {
  display: none;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-7 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-7:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-60 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-60 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-26 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-26:hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-25 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #B9B9BD;
}

.emotion-25:hover {
  cursor: pointer;
  background: #F2F2F7;
}

<div>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-4"
        >
          <input
            autocomplete="off"
            class="emotion-0"
            placeholder="dd/mm/yyyy"
            type="text"
            value=""
          />
          <span
            class="emotion-3"
          >
            <button
              class="emotion-2"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-1"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <defs>
                    <path
                      d="M6 4h1V3c-.002-.667.33-1 1-1 .67 0 1.004.333 1.004 1v1H15V2.941c0-.627.333-.941 1-.941s1 .314 1 .941V4h1c1.333 0 2 .667 2 2v14c0 1.333-.667 2-2 2H6c-1.333 0-2-.667-2-2V6.004C4 4.668 4.667 4 6 4zm0 16h12V10H6v10zM6 6v2h12V6H6zm3 8c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1zm-5 4c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1z"
                      id="calendar-outline_svg__a"
                    />
                  </defs>
                  <use
                    xlink:href="#calendar-outline_svg__a"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="emotion-63"
        data-visible="false"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="emotion-62"
          tabindex="-1"
        >
          <div
            class="emotion-61"
          >
            <div
              class="emotion-24"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Previous month"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-8"
                  >
                    Oct
                  </div>
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Next month"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Previous year"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-8"
                  >
                    2018
                  </div>
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Next year"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <table
              class="emotion-60"
            >
              <thead>
                <tr>
                  <th>
                    S
                  </th>
                  <th>
                    M
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    W
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    S
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    data-date="2018-09-30"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-01"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-10-02"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-10-03"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                  <td
                    data-date="2018-10-04"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      04
                    </span>
                  </td>
                  <td
                    data-date="2018-10-05"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      05
                    </span>
                  </td>
                  <td
                    data-date="2018-10-06"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      06
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-07"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      07
                    </span>
                  </td>
                  <td
                    data-date="2018-10-08"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      08
                    </span>
                  </td>
                  <td
                    data-date="2018-10-09"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      09
                    </span>
                  </td>
                  <td
                    data-date="2018-10-10"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      10
                    </span>
                  </td>
                  <td
                    data-date="2018-10-11"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      11
                    </span>
                  </td>
                  <td
                    data-date="2018-10-12"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      12
                    </span>
                  </td>
                  <td
                    data-date="2018-10-13"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      13
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-14"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      14
                    </span>
                  </td>
                  <td
                    data-date="2018-10-15"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      15
                    </span>
                  </td>
                  <td
                    data-date="2018-10-16"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      16
                    </span>
                  </td>
                  <td
                    data-date="2018-10-17"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      17
                    </span>
                  </td>
                  <td
                    data-date="2018-10-18"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      18
                    </span>
                  </td>
                  <td
                    data-date="2018-10-19"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      19
                    </span>
                  </td>
                  <td
                    data-date="2018-10-20"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      20
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-21"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      21
                    </span>
                  </td>
                  <td
                    data-date="2018-10-22"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      22
                    </span>
                  </td>
                  <td
                    data-date="2018-10-23"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      23
                    </span>
                  </td>
                  <td
                    data-date="2018-10-24"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      24
                    </span>
                  </td>
                  <td
                    data-date="2018-10-25"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      25
                    </span>
                  </td>
                  <td
                    data-date="2018-10-26"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      26
                    </span>
                  </td>
                  <td
                    data-date="2018-10-27"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      27
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-28"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      28
                    </span>
                  </td>
                  <td
                    data-date="2018-10-29"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2018-10-30"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-31"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      31
                    </span>
                  </td>
                  <td
                    data-date="2018-11-01"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-11-02"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-11-03"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePickerInput should render correctly when disabled 1`] = `
.emotion-5 {
  display: inline-block;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-0:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::placeholder {
  color: #B9B9BD;
}

.emotion-0:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-0:not(:disabled):hover {
  border-color: #818489;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-0:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-63 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-62 {
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
}

.emotion-61 {
  width: 288px;
}

.emotion-8 {
  margin-bottom: 0rem;
  margin-top: 0rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  display: inline-block;
}

.emotion-8:first-of-type {
  margin-left: 0;
}

.emotion-8:last-of-type {
  margin-right: 0;
}

.emotion-8:empty {
  display: none;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-7 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-7:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-60 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-60 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-26 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-26:hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-25 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #B9B9BD;
}

.emotion-25:hover {
  cursor: pointer;
  background: #F2F2F7;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

<div>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-4"
        >
          <input
            autocomplete="off"
            class="emotion-0"
            disabled=""
            placeholder="dd/mm/yyyy"
            type="text"
            value=""
          />
          <span
            class="emotion-3"
          >
            <button
              class="emotion-2"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-1"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <defs>
                    <path
                      d="M6 4h1V3c-.002-.667.33-1 1-1 .67 0 1.004.333 1.004 1v1H15V2.941c0-.627.333-.941 1-.941s1 .314 1 .941V4h1c1.333 0 2 .667 2 2v14c0 1.333-.667 2-2 2H6c-1.333 0-2-.667-2-2V6.004C4 4.668 4.667 4 6 4zm0 16h12V10H6v10zM6 6v2h12V6H6zm3 8c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1zm-5 4c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1z"
                      id="calendar-outline_svg__a"
                    />
                  </defs>
                  <use
                    xlink:href="#calendar-outline_svg__a"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="emotion-63"
        data-visible="false"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="emotion-62"
          tabindex="-1"
        >
          <div
            class="emotion-61"
          >
            <div
              class="emotion-24"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Previous month"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-8"
                  >
                    Oct
                  </div>
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Next month"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Previous year"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-8"
                  >
                    2018
                  </div>
                  <div
                    class="emotion-8"
                  >
                    <button
                      class="emotion-7"
                      tabindex="-1"
                      title="Next year"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          class="emotion-1"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <table
              class="emotion-60"
            >
              <thead>
                <tr>
                  <th>
                    S
                  </th>
                  <th>
                    M
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    W
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    S
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    data-date="2018-09-30"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-01"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-10-02"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-10-03"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                  <td
                    data-date="2018-10-04"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      04
                    </span>
                  </td>
                  <td
                    data-date="2018-10-05"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      05
                    </span>
                  </td>
                  <td
                    data-date="2018-10-06"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      06
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-07"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      07
                    </span>
                  </td>
                  <td
                    data-date="2018-10-08"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      08
                    </span>
                  </td>
                  <td
                    data-date="2018-10-09"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      09
                    </span>
                  </td>
                  <td
                    data-date="2018-10-10"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      10
                    </span>
                  </td>
                  <td
                    data-date="2018-10-11"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      11
                    </span>
                  </td>
                  <td
                    data-date="2018-10-12"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      12
                    </span>
                  </td>
                  <td
                    data-date="2018-10-13"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      13
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-14"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      14
                    </span>
                  </td>
                  <td
                    data-date="2018-10-15"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      15
                    </span>
                  </td>
                  <td
                    data-date="2018-10-16"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      16
                    </span>
                  </td>
                  <td
                    data-date="2018-10-17"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      17
                    </span>
                  </td>
                  <td
                    data-date="2018-10-18"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      18
                    </span>
                  </td>
                  <td
                    data-date="2018-10-19"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      19
                    </span>
                  </td>
                  <td
                    data-date="2018-10-20"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      20
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-21"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      21
                    </span>
                  </td>
                  <td
                    data-date="2018-10-22"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      22
                    </span>
                  </td>
                  <td
                    data-date="2018-10-23"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      23
                    </span>
                  </td>
                  <td
                    data-date="2018-10-24"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      24
                    </span>
                  </td>
                  <td
                    data-date="2018-10-25"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      25
                    </span>
                  </td>
                  <td
                    data-date="2018-10-26"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      26
                    </span>
                  </td>
                  <td
                    data-date="2018-10-27"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      27
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2018-10-28"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      28
                    </span>
                  </td>
                  <td
                    data-date="2018-10-29"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2018-10-30"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2018-10-31"
                  >
                    <span
                      class="emotion-26"
                      role="button"
                    >
                      31
                    </span>
                  </td>
                  <td
                    data-date="2018-11-01"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2018-11-02"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2018-11-03"
                  >
                    <span
                      class="emotion-25"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
